# MLSysCourse_Needle

./: .gitignore
course_homework/hw0/src/: simple_ml.py
course_homework/hw2/: dlsyscourse_hw2.ipynb
course_homework/hw2/python/needle/: autograd.py
course_homework/hw3/: dlsyscourse_hw3.ipynb  dlsyscourse_hw3_local.ipynb
course_homework/hw3/python/needle/: autograd.py  data.py  nn.py  ops.py  optim.py
course_homework/hw3/python/needle/backend_ndarray/: ndarray.py
course_homework/hw3/src/: ndarray_backend_cpu.cc
course_homework/hw4/: CMakeLists.txt  dlsyscourse_hw4.ipynb  log
course_homework/hw4/apps/: models.py  simple_training.py
course_homework/hw4/data/ptb/: train.txt
course_homework/hw4/python/needle/: autograd.py  backend_selection.py  data.py  init.py  nn.py  ops.py  optim.py
course_homework/hw4/python/needle/backend_ndarray/: ndarray.py  ndarray_backend_numpy.py
course_homework/hw4/src/: ndarray_backend_cpu.cc  ndarray_backend_cuda.cu
course_homework/hw4/tests/: debug.py  test_cifar_ptb_data.py  test_sequence_models.py
document/: logsumexp.md  softmax.md
hw3/: dlsyscourse_hw3_local.ipynb
hw3/python/needle/backend_ndarray/: ndarray.py
hw3/src/: ndarray_backend_cpu.cc  ndarray_backend_cuda.cu
python/: CMakeLists.txt  MANIFEST.in  dlsyscourse_hw3_local.ipynb  setup.py
python/needleTensor.egg-info/: PKG-INFO
python/src/: ndarray_backend_cuda.cu
